@@ -2948,7 +2948,7 @@ DECODE(OP_ClientUpdate) {
 	FINISH_DIRECT_DECODE();
 }
 
-
+#pragma optimize( "", off )
 DECODE(OP_CharacterCreate) {
 	DECODE_LENGTH_EXACT(structs::CharCreate_Struct);
 	SETUP_DIRECT_DECODE(CharCreate_Struct, structs::CharCreate_Struct);
@@ -2982,7 +2982,7 @@ DECODE(OP_CharacterCreate) {
 
 	FINISH_DIRECT_DECODE();
 }
-
+#pragma optimize( "", off )
 
 DECODE(OP_WhoAllRequest) {
 	DECODE_LENGTH_EXACT(structs::Who_All_Struct);
